--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
       </div>
   
-      <div class="content" style="background-image: url(./image/slide.jpg); background-size: 1510px 600px; background-repeat: no-repeat;">
+      <div class="content" style="background-image: url(./slide.jpg); background-size: 1510px 600px; background-repeat: no-repeat;">
          <h1>BEST BAKE HERE</h1>
          <span>Donec at massa nec sem eleifend fermentum.</span> <br /> <br />
          <div class="learnmore">
@@ -49,7 +49,7 @@
           <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor</span>
         </div>
         <div class="item item-img">
-          <img src="./image/anh1.jpg" width="100%" height="400">
+          <img src="./anh1.jpg" width="100%" height="400">
         </div>
         <div class="item item-text" style="background-color: #ff0e83;">
           <h2>Creativity</h2>
@@ -65,7 +65,7 @@
           <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor</span>
         </div>
         <div class="item">
-          <img src="./image/anh2.jpg" width="100%" height="400">
+          <img src="./anh2.jpg" width="100%" height="400">
         </div>
         <div class="item item-text" style="background-color: #836eaa;">
           <h2>Quality</h2>
@@ -78,14 +78,14 @@
 
       <div class="container3">
         <div class="item">
-          <img src="./image/anh3.jpg"  width="100%" height="400">
+          <img src="./anh3.jpg"  width="100%" height="400">
         </div>
         <div class="item item-text" style="background-color: #4e2a84;">
           <h2>Tasky Cakes</h2>
           <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor</span>
         </div>
         <div class="item item-img" >
-          <img src="./image/anh3_2.jpg"  width="100%" height="400">
+          <img src="./anh3_2.jpg"  width="100%" height="400">
         </div>
       </div>
       
@@ -109,7 +109,7 @@
           </div>
       </div>
 
-      <div class="container4-big" style=" background-image: url(./image/s1.jpg) ; background-size: 1510px 700px;background-repeat: no-repeat;">
+      <div class="container4-big" style=" background-image: url(./s1.jpg) ; background-size: 1510px 700px;background-repeat: no-repeat;">
           <div class="container4-title">
              
                 <h2>OUR SERVICES</h2>
